# supermarket-cleaning-robot

./: .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  package.xml
DOXYGEN/html/: classObjectDectection.html  dir_000004_000000.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a_dep.map  dir_3abfb2b8920c47bc123d166a2f3ca2d4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  main_8cpp.html  object__detection_8h__incl.md5  obstacle__avoidance_8cpp__incl.md5  obstacle__avoidance_8h__incl.map  obstacle__avoidance_8h__incl.md5  turtlebot_8cpp.html  turtlebot_8h__dep__incl.map
DOXYGEN/html/search/: all_3.js  all_4.js  classes_0.js  files_2.js  functions_0.js  functions_2.js
DOXYGEN/latex/: classObstacleAvoidance.tex  dir_3abfb2b8920c47bc123d166a2f3ca2d4.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  main_8cpp__incl.md5  obstacle__avoidance_8cpp__incl.md5  obstacle__avoidance_8h.tex  obstacle__avoidance__test_8cpp.tex  obstacle__avoidance__test_8cpp__incl.md5  turtlebot_8cpp__incl.md5
data/results/: cppcheck_results  cpplint_results
data/worlds/: random.world  supermarket.world  world.world
docs/html/: CMakeLists_8txt.html  README_8md.html  annotated.html  classObjectDectection-members.html  classObjectDetection-members.html  classObjectDetection.html  classObstacleAvoidance-members.html  classObstacleAvoidance.html  classTurtlebot-members.html  classTurtlebot.html  classes.html  detector_8cpp.html  detector_8cpp__incl.map  detector_8cpp__incl.md5  dir_000003_000001.html  dir_000003_000002.html  dir_000004_000000.html  dir_000005_000000.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a_dep.map  dir_13e138d54eb8818da29c3992edef070a_dep.md5  dir_2f0945c8e09ea06b7906a0ed74b0330b.html  dir_2f0945c8e09ea06b7906a0ed74b0330b_dep.map  dir_2f0945c8e09ea06b7906a0ed74b0330b_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_7a286d6d70ad718e4d75d986101764c3.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23_dep.map  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp__incl.map  (+39 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  files_1.js  files_3.js  files_4.js  functions_0.js  (+10 more)
docs/latex/: CMakeLists_8txt.tex  annotated.tex  classObjectDectection.tex  classObjectDetection.tex  classObstacleAvoidance.tex  classTurtlebot.tex  detector_8cpp.tex  detector_8cpp__incl.md5  dir_13e138d54eb8818da29c3992edef070a.tex  dir_2f0945c8e09ea06b7906a0ed74b0330b.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_7a286d6d70ad718e4d75d986101764c3.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  dir_d44c64559bbebec7f509842c48db8b23_dep.md5  files.tex  main_8cpp.tex  md_README.tex  navigator_8cpp.tex  navigator_8cpp__incl.md5  object__detection_8cpp.tex  object__detection_8cpp__incl.md5  object__detection_8h.tex  object__detection_8h__dep__incl.md5  object__detection_8h__incl.md5  object__detection__test_8cpp.tex  object__detection__test_8cpp__incl.md5  obstacle__avoidance_8cpp.tex  obstacle__avoidance_8h.tex  obstacle__avoidance_8h__dep__incl.md5  obstacle__avoidance_8h__incl.md5  obstacle__avoidance__test_8cpp.tex  refman.tex  turtlebot_8cpp.tex  turtlebot_8cpp__incl.md5  turtlebot_8h.tex  turtlebot_8h__dep__incl.md5  turtlebot_8h__incl.md5  turtlebot__test_8cpp.tex  turtlebot__test_8cpp__incl.md5
include/object_detection/: object_detection.h
include/obstacle_avoidance/: obstacle_avoidance.h
include/turtlebot/: turtlebot.h
launch/: object_collection.launch
src/: detector.cpp  main.cpp  navigator.cpp  object_detection.cpp  obstacle_avoidance.cpp  turtlebot.cpp
test/: main.cpp  object_detection_test.cpp  obstacle_avoidance_test.cpp  project_x_test.launch  turtlebot_test.cpp
